2008-09-16  Alper KANAT  <alperkanat@gmail.com>

	* media/js/tiny_mce/textarea.js: resolved the <p> and <br> problem..

2008-09-15  Alper KANAT  <alperkanat@gmail.com>

	* blog/admin.py, media/js/tiny_mce: Blog entries' and flatpages' admin page
	now has TinyMCE support.. (WYSIWYG HTML Editor support is added)

2008-09-14  Alper KANAT  <alperkanat@gmail.com>

	* media/css/style.css, polls/views.py, templates/blog/poll.html: poll
	results can be seen through the sidebar..
	* blog/views.py, blog/feeds.py: sticky blog entries is shown in the rss
	feeds now.. sticky feeds can be shown or hidden by just a parameter..
	* blog/models.py: admin page doesn't show the url of sticky posts since
	they cannot be indexed and they're not regular pages..

2008-09-13  Alper KANAT  <alperkanat@gmail.com>

	* templates/frontpage/base.html: Added Google Analytics JS code..
	* templates/blog/detail.html: Fixed a bug..

2008-09-12  Alper KANAT  <alperkanat@gmail.com>

	* TODO: only 2 todo's left before the b3 release..
	* blog/templatetags/blog_filters.py, templates/blog/detail.html,
	templates/blog/homepage.html, templates/blog/sticky.html,
	templates/frontpage/homepage.html, templates/feeds/latest_description.html,
	templates/flatpages/default.html, users/views.py: blog entries, sticky posts
	have emotions now.. defaults are defined in the python code.. i need to
	document these changes if someone else would use raptiye as the blog
	engine..
	* TODO: 1 less todo's.. :)
	* media/css/style.css, extra/tag_cloud.py, extra/search.py, blog/views.py,
	blog/templatetags/blog_filters.py, blog/feeds.py,
	templates/users/profile.html, templates/blog/homepage.html, 
	templates/blog/sticky.html: raptiye shows the latest sticky post at the
	homepage now.. it's invisible through search queries, tag and blog listings,
	rss feeds..
	* media/images/edit.png, media/css/style.css, templates/blog/detail.html,
	templates/blog/homepage.html: every blog entry have a link to edit itself if